# sync-twitch-events

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  rust-clippy.yml  sync.yml
src/: main.rs
