[package]
name = "sync-twitch-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"
reqwest = "0.11.12"
chrono = "0.4.23"
now = "0.1.3"
twitch_api2 = { version = "0.6.1", features = ["reqwest", "helix"] }
serenity = { version = "0.11.5", features = ["client"] }
